--- a/src/app/resources/css/application.css
+++ b/src/app/resources/css/application.css
@@ -22,6 +22,24 @@ body {
     text-align: right;
     width:120px;
     font-size: 1.2em;
+    background-color: transparent;
+}
+
+.countdown-over-alert-on {
+    color: red;
+    transition: all 0.5s;
+}
+.countdown-over-alert-off {
+    color: black;
+    transition: all 0.5s;
+}
+
+.countdown-bar {
+}
+.countdown-bar-used {
+    display: block;
+    border-bottom: 1px black solid;
+    margin: 0 auto;
 }
 
 /**Stopwatch*/
