--- a/src/app/modules/countdown/countdown-view.html
+++ b/src/app/modules/countdown/countdown-view.html
@@ -1,4 +1,4 @@
-<div class="stopwatch-container">
+<div class="countdown-container">
     <div class="countdown">
         <span data-ng-click="resetCountdown()"
               class="fa fa-history fa-lg clickable"></span>
@@ -26,14 +26,6 @@
                             'countdown-over-alert-off' : countdown.finished && !countdown.alert}">
             <span data-ng-bind="countdown.timeRemainingInMs | time:'hh:mm:ss.ms'"></span>
         </h1><br/>
-        <div class="countdown-bar text-center">
-            <span data-ng-if="getPercentageCountdownRemaining() === 0 && countdown.finished">
-                Countdown Finished
-            </span>
-            <span data-ng-if="getPercentageCountdownRemaining() !== 0"
-                  data-ng-bind="getPercentageCountdownRemaining().toFixed(0) + '%'"
-                  class="countdown-bar-used text-center"
-                  data-ng-style="{'width': getPercentageCountdownRemaining() + '%'}"></span>
-        </div>
+        <div data-countdown-bar></div>
     </div>
 </div>
