--- a/src/app/modules/countdown/countdown-view.html
+++ b/src/app/modules/countdown/countdown-view.html
@@ -1,11 +1,8 @@
 <div class="countdown-container">
     <div class="countdown">
         <span data-ng-click="resetCountdown()"
-              class="fa fa-history fa-lg clickable"></span>
-        <input data-ng-model="countdown.inputTime"
-               data-ng-keyup="setCountdownTimer(countdown.inputTime)"
-               class="countdown-input pull-right">
-        <div class="btn-group pull-right">
+              class="fa fa-history fa-lg clickable pull-right"></span>
+        <div class="btn-group">
             <div data-toggle="dropdown">
                 <span class="fa fa-clock-o fa-lg fa-fw pull-right clickable"
                       style="margin-top: 0.3em;"></span>
@@ -20,6 +17,9 @@
                 <li><a data-ng-click="countdown.inputTime = '1h 30m'; setCountdownTimer(countdown.inputTime)" class="clickable">in 1 hour and 30 minutes...</a></li>
             </ul>
         </div>
+        <input data-ng-model="countdown.inputTime"
+               data-ng-keyup="setCountdownTimer(countdown.inputTime)"
+               class="countdown-input">
         <h1 data-ng-click="toggleCountdown()"
             class="time-display clickable"
             data-ng-class="{'countdown-over-alert-on' : countdown.finished && countdown.alert,
