--- a/serenity-client/src/app/modules/splash/splash-view.html
+++ b/serenity-client/src/app/modules/splash/splash-view.html
@@ -1,6 +1,6 @@
 <div class="splash-container text-center"
      data-ng-class="{'splash-intro-animation' : animating}">
-    <h1 ui-sref="clock"
+    <h1 ui-sref="clock({list_uuid: user.id})"
         class="splash-application-name text-center clickable">Serenity</h1>
     <span>86,400 seconds in a day: keep track of them.</span>
     <br/>
