Added a few loading indicators.

--- a/serenity-client/src/app/modules/clock/clock-view.html
+++ b/serenity-client/src/app/modules/clock/clock-view.html
@@ -14,7 +14,7 @@
         <h5 style="border-bottom: 1px black solid;">
           Events
            <span data-ng-click="createMarker()"
-                 data-ng-class="{'fa-plus': !operations.createMarker.status, 'fa-loading': operations.createMarker.status}"
+                 data-ng-class="{'fa-plus': !operations.createMarker.status, 'fa-spinner fa-spin': operations.createMarker.status}"
                  class="fa fa-fw clickable"></span>
         </h5>
         <div data-ng-repeat="marker in markers"
@@ -24,11 +24,12 @@
             |
             <input data-ng-model="marker.description"
                    data-ng-blur="updateMarker(marker)"
-                   data-ng-disabled="operations.deleteMarker.markers[marker.id].status"
+                   data-ng-disabled="operations.markers[marker.id].status"
                    placeholder="Enter a description..."
                    class="marker-text">
                     <span data-ng-click="deleteMarker(marker)"
-                          class="fa fa-trash fa-fw clickable pull-right"></span>
+                          data-ng-class="{'fa-trash': !operations.markers[marker.id].status, 'fa-spinner fa-spin': operations.markers[marker.id].status}"
+                          class="fa fa-fw clickable pull-right"></span>
         </div>
     </div>
 </div>
